# Pygmee-Devs

./: README.md  global.d.ts  package-lock.json  package.json
Pygmee/: README.md  package-lock.json  package.json
Pygmee/Théorique/markdown/: choix_technologies.md
Pygmee/src/: App.tsx
Théorique/markdown/: choix_technologies.md  liste_fonctionnalités.md  parcours_utilisateur.md  ressources_utilisées.md
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/python/: codegen.py  example.py  model_training.py  test.py  traitement.py
src-tauri/simulation/: Penguins.csv  personne.dnl
src-tauri/src/: main.rs
src/components/: CodeDisplay.tsx  ExportButton.tsx  Header.tsx  Menu.tsx  MenuBot.tsx  MenuTop.tsx  ModelDisplay.tsx  contextMenu.tsx
src/graph/: graph.ts  graphGenerator.ts
src/html/: code.html  form_link.html  form_modl.html
src/public/: App.css  ContextMenu.css  ContextMenu.module.css  form.css
src/script/: code.ts  graph.ts  graphGenerator.ts  ide.ts
