[package]
name = "pygmee"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2.5", features = ["app-all", "dialog-confirm", "dialog-message", "dialog-open", "fs-copy-file", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-rename-file", "fs-write-file", "path-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
xdg-user = "0.2.1"
snailquote = "0.3.1"




[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize"]

